syncing of checked state works

--- a/config.yaml
+++ b/config.yaml
@@ -14,7 +14,20 @@ skylight:
   list_name: "Test List"
 
 database:
-  path: "sync_state.db"  # SQLite database for state tracking
+  path: "sync_state_v2.db"  # SQLite database for Phase 6 architecture
+
+# Phase 6 Sync Configuration
+sync:
+  # Conflict resolution strategy: "paprika_wins", "skylight_wins", "newest_wins"
+  conflict_strategy: "newest_wins"
+  # Whether Paprika always wins tie-breakers (when timestamps are equal/missing)
+  paprika_always_wins: true
+  # Timestamp tolerance for "newest wins" strategy (seconds)
+  timestamp_tolerance_seconds: 60
+
+  # Item linking configuration
+  fuzzy_threshold: 0.85  # Similarity threshold for fuzzy matching (0.0-1.0)
+  case_sensitive: false  # Whether name matching is case sensitive
 
 logging:
   level: "INFO"  # DEBUG, INFO, WARNING, ERROR
