--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "pyyaml>=6.0",
     "requests>=2.31.0",
     "psutil>=5.9.0",
+    "platformdirs>=4.0.0",
 ]
 
 [project.optional-dependencies]
