--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dev = [
     "pytest-asyncio>=0.21.0",
     "black>=23.0.0",
     "mypy>=1.5.0",
+    "bump2version>=1.0.1",
 ]
 
 [project.scripts]
